@@ -1,5 +1,6 @@
 0.11.101
 	+ Fix typo in CreateClient
+	+ Do not remove quagga and openVPN rc links
 0.11.100
 	+ Bugfix. rip password is not required for normal clients
 	+ Add feature to allow masquerading in VPNs. Now you can use the
